adjust requirements and pyproject to match 2026 versioning

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,10 +14,10 @@ components = [
     #"all",
     # "apriltag",
     "commands2",
-    "phoenix6",
-    "rev",
+    # "phoenix6",
+    # "rev",
     # "photonvision",
-    "pathplannerlib",
+    # "pathplannerlib",
     # "cscore",
     # "romi",
     # "sim",
