--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
 robotpy==2026.2.1
-photonlibpy==2026.1.1rc4
-robotpy-pathplannerlib=2026.1.1
+robotpy[all]==2026.2.1
+photonlibpy==2026.1.1
+robotpy-pathplannerlib==2026.1.1
 robotpy-rev==2026.0.1
 phoenix6==26.1.0
